--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,63 @@
+html {
+  overscroll-behavior: none;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.bottom_navbar {
+  height: 100px;
+  background: #fcf6d7;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  align-items: center;
+  padding: 0 24px;
+  border-top-left-radius: 20px;
+  display: flex;
+  border-top-right-radius: 20px;
+}
+
+.line_tool_container {
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.line_tool_container.selected {
+  border: 1px solid black;
+}
+
+.clear_button {
+  background: #fff;
+  border-radius: 8px;
+  width: 100px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid black;
+  color: black;
+  font-size: 16px;
+  position: fixed;
+  top: 8px;
+  right: 8px;
+}
+
+.triangle_information {
+  position: fixed;
+  left: 8px;
+  top: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
